my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: datascientest/mysql-k8s:1.0.0
          ports:
            - containerPort: 3306
        - name: fastapi
          image: pockyee/my-fastapi-app:latest
          ports:
            - containerPort: 8000
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
