my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: mysql
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
